Refactoring + Encrypt card + database layer.
Function buy pokemon out of buy-pokemon route.
Encrypt credit card before send it through network.
Create a database/models folder to map all entities.
Remove most recent version config when install npm packages.

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.17.2",
+    "dotenv": "4.0.0",
     "express": "4.15.3",
+    "pagarme": "3.1.0",
+    "pg": "6.4.0",
     "request": "2.81.0",
     "request-promise": "4.2.1",
     "sequelize": "4.2.1",
     "sqlite3": "3.1.8",
-    "supertest": "^3.0.0"
+    "supertest": "3.0.0"
   },
   "devDependencies": {
     "jest": "20.0.4"
