--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "1.17.2",
     "dotenv": "4.0.0",
     "express": "4.15.3",
+    "express-validation": "1.0.2",
+    "joi": "10.6.0",
     "pagarme": "3.1.0",
     "pg": "6.4.0",
     "request": "2.81.0",
