--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "pokemon",
   "version": "1.0.0",
   "description": "Example of a really bad code",
-  "main": "idnex.js",
+  "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "start": "node index",
+    "test": "jest --verbose --maxWorkers=1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "3.5.0",
     "body-parser": "1.17.2",
     "dotenv": "4.0.0",
     "express": "4.15.3",
