--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bluebird": "3.5.0",
     "body-parser": "1.17.2",
+    "continuation-local-storage": "^3.2.0",
     "dotenv": "4.0.0",
     "express": "4.15.3",
     "express-validation": "1.0.2",
