--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bluebird": "3.5.0",
     "body-parser": "1.17.2",
     "continuation-local-storage": "^3.2.0",
+    "cors": "2.8.3",
     "dotenv": "4.0.0",
     "express": "4.15.3",
     "express-validation": "1.0.2",
