--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "jest --verbose --maxWorkers=1"
+    "test": "jest --verbose --maxWorkers=1",
+    "eslint": "eslint"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bluebird": "3.5.0",
     "body-parser": "1.17.2",
-    "continuation-local-storage": "^3.2.0",
+    "continuation-local-storage": "3.2.0",
     "cors": "2.8.3",
     "dotenv": "4.0.0",
     "express": "4.15.3",
@@ -27,6 +28,9 @@
     "supertest": "3.0.0"
   },
   "devDependencies": {
+    "eslint": "4.3.0",
+    "eslint-config-airbnb-base": "11.3.1",
+    "eslint-plugin-import": "2.7.0",
     "jest": "20.0.4"
   },
   "jest": {
