--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cors": "2.8.3",
     "dotenv": "4.0.0",
     "express": "4.15.3",
-    "express-validation": "1.0.2",
+    "express-validator": "3.2.1",
     "joi": "10.6.0",
     "pagarme": "3.1.0",
     "pg": "6.1.0",
