--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pagarme": "3.1.0",
     "pg": "6.1.0",
     "sequelize": "3.30.4",
+    "sequelize-cli": "2.7.0",
     "supertest": "3.0.0"
   },
   "devDependencies": {
