--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "supertest": "3.0.0"
   },
   "devDependencies": {
+    "apidoc": "0.17.6",
     "jest": "20.0.4",
     "standard": "10.0.2"
   },
