--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "apidoc": "0.17.6",
     "chai": "4.1.1",
+    "chai-as-promised": "^7.1.1",
     "chai-http": "3.0.0",
     "mocha": "3.5.0",
     "standard": "10.0.2"
