--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "SERVER_PORT=3001 DB_NAME=pokemons_test mocha test --recursive",
+    "test": "npm run test:unit",
+    "test:unit": "mocha test/unit --recursive",
+    "test:integration": "SERVER_PORT=3001 DB_NAME=pokemons_test mocha test/integration --recursive",
     "docs": "apidoc -o docs/ -i src/"
   },
   "author": "Guilherme Caraciolo",
