--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index",
     "test": "npm run test:unit",
-    "test:unit": "mocha test/unit --recursive",
+    "test:unit": "DB_NAME=pokemons_test mocha test/unit --recursive",
     "test:integration": "SERVER_PORT=3001 DB_NAME=pokemons_test mocha test/integration --recursive",
     "docs": "apidoc -o docs/ -i src/"
   },
