remove class syntax from pokemon package

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "npm run test:unit",
     "test:unit": "DB_NAME=pokemons_test mocha test/unit --recursive",
     "test:integration": "SERVER_PORT=3001 DB_NAME=pokemons_test mocha test/integration --recursive",
+    "test:full": "SERVER_PORT=3001 DB_NAME=pokemons_test mocha test --recursive",
     "docs": "apidoc -o docs/ -i src/"
   },
   "author": "Guilherme Caraciolo",
