--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pokemon",
   "version": "1.0.1",
   "description": "Api to buy pokemons",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index",
+    "start": "node src/index",
     "test": "npm run test:unit",
     "test:unit": "DB_NAME=pokemons_test mocha test/unit",
     "test:integration": "SERVER_PORT=3001 DB_NAME=pokemons_test mocha test/integration",
