--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express-validator": "3.2.1",
     "pagarme": "3.1.0",
     "pg": "6.1.0",
-    "sequelize": "3.30.4",
+    "sequelize": "^4.8.0",
     "sequelize-cli": "2.7.0"
   },
   "devDependencies": {
